--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ anyio==4.11.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
+colorama==0.4.6
 coloredlogs==15.0.1
 contourpy==1.3.3
 cycler==0.12.1
@@ -34,21 +35,14 @@ nvidia-cuda-nvrtc-cu12==12.8.93
 nvidia-cuda-runtime-cu12==12.8.90
 nvidia-cudnn-cu12==9.10.2.21
 nvidia-cufft-cu12==11.3.3.83
-nvidia-cufile-cu12==1.13.1.3
-nvidia-curand-cu12==10.3.9.90
-nvidia-cusolver-cu12==11.7.3.90
-nvidia-cusparse-cu12==12.5.8.93
-nvidia-cusparselt-cu12==0.7.1
-nvidia-nccl-cu12==2.27.5
-nvidia-nvjitlink-cu12==12.8.93
-nvidia-nvshmem-cu12==3.3.20
-nvidia-nvtx-cu12==12.8.90
-onnx==1.17.0
+nvidia-nvjitlink-cu12==12.9.86
+onnx==1.19.1
 onnxruntime-gpu==1.22.0
 packaging==25.0
 pillow==12.0.0
 protobuf==6.33.1
 pyparsing==3.2.5
+pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
 PyYAML==6.0.3
 requests==2.32.5
@@ -60,9 +54,8 @@ six==1.17.0
 sniffio==1.3.1
 sympy==1.14.0
 tifffile==2025.10.16
-torch==2.9.1+cu128
+torch==2.9.1
 tqdm==4.67.1
-triton==3.5.1
 typer-slim==0.20.0
 typing_extensions==4.15.0
 urllib3==2.5.0
